syntax = "proto3";

package product;

option go_package = "./pkg/proto/pb";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
    rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
    rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
    rpc ListProduk(ListproductsRequest)returns (ListProductResponse) {}
  }
  
  // CreateProduct
  
  message CreateProductRequest {
    string name = 1;
    int64 stock = 2;
    int64 price = 3;
  }
  
  message CreateProductResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
  }
  
  // FindOne
  
  message FindOneData {
    int64 id = 1;
    string name = 2;
    int64 stock = 3;
    int64 price = 4;
  }
  
  message FindOneRequest { int64 id = 1; }
  
  message FindOneResponse {
    int64 status = 1;
    string error = 2;
    FindOneData data = 3;
  }
  
  // DecreaseStock
  
  message DecreaseStockRequest {
    int64 id = 1;
    int64 orderId = 2;
    int64 quantity = 3;
  }
  
  message DecreaseStockResponse {
    int64 status = 1;
    string error = 2;
  }

  message PaginationResponse {
    int32 limit = 1;
    int32 page = 2;
    int64 totalRows = 3;   
    int32 totalPages = 4;   
}

message Product{
  int64 id = 1;
  string name = 2;
  int64 stock = 3;
  int64 price = 4;
}

message ListproductsRequest {}

message ListProductResponse{
  int64 status = 1;
  string error = 2;
  repeated Product data = 3;
}